--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "native-base": "^2.3.5",
     "react": "16.0.0",
     "react-native": "0.50.3",
-    "react-native-android-sms-listener": "^0.5.0",
+    "react-native-contacts": "^2.0.0",
+    "react-native-sms-android": "^0.4.1",
     "react-navigation": "^1.0.0-beta.22"
   }
 }
