--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-native-contacts": "^2.0.0",
+    "react-native-i18n": "^2.0.10",
     "react-native-sms-android": "^0.4.1",
     "react-navigation": "^1.0.0-beta.22"
   }
